testsuite/tests/properties/invalid_dyn_env/assocs_getter_bad_rtype/test.lkt
from common import FooNode

class Example: FooNode {
    @lazy args_env: LexicalEnv =
        dynamic_lexical_env(Example.assocs_getter)

    fun assocs_getter(): Bool = true
}
